[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reparatio"
version = "0.1.0"
description = "Python SDK for the Reparatio data conversion API (alpha)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["csv", "parquet", "excel", "data", "conversion", "etl"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
dependencies = [
    "httpx>=0.24",
]

[project.urls]
Homepage = "https://reparatio.app"
Repository = "https://github.com/jfrancis42/reparatio-sdk-py"
"Bug Tracker" = "https://github.com/jfrancis42/reparatio-sdk-py/issues"
"MCP Server" = "https://github.com/jfrancis42/reparatio-mcp"
"CLI Tool" = "https://github.com/jfrancis42/reparatio-cli"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/reparatio"]
